Fix horizontal scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  width: min(1200px, 100vw);
+  width: min(1200px, 100%);
   margin-inline: auto;
   padding-inline: 1rem;
 }
